--- a/Efficientnet/test.ipynb
+++ b/Efficientnet/test.ipynb
@@ -2,28 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "915dea7f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['C:\\\\somefiles\\\\handdataset\\\\image\\\\1.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\10.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\11.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\12.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\14.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\16.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\18.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\19.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\21.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\22.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\23.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\24.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\25.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\26.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\28.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\29.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\30.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\31.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\32.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\33.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\34.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\35.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\36.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\37.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\38.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\39.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\4.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\40.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\41.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\43.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\45.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\46.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\47.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\48.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\5.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\50.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\52.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\53.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\54.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\6.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\7.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\8.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\9.jpg'] \n",
-      " [1, 0, 0, 0, 1, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 1, 1, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0] \n",
-      " ['C:\\\\somefiles\\\\handdataset\\\\image\\\\13.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\15.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\2.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\20.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\27.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\3.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\42.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\44.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\49.jpg', 'C:\\\\somefiles\\\\handdataset\\\\image\\\\51.jpg'] \n",
-      " [1, 1, 0, 0, 0, 1, 1, 1, 0, 0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "import random\n",
     "import csv\n",
     "\n",
-    "root = r\"C:\\somefiles\\handdataset\"\n",
+    "root = r\"\"\n",
     "\n",
     "assert os.path.exists(root), \"训练文件夹填错了\"\n",
     "val_rate = 0.2\n",
@@ -65,26 +54,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7f5e0d1d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['4', '1', '0', '1', '1']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
-    "with open(r\"C:\\somefiles\\handdataset\\label.csv\", mode='r', encoding='utf-8') as file:\n",
+    "with open(r\"\", mode='r', encoding='utf-8') as file:\n",
     "    all_label = []\n",
     "    csv_reader = csv.reader(file)\n",
     "    for row in csv_reader:\n",
-    "        all_label.append(row)\n",
-    "print(all_label[4])"
+    "        if row[0] != '17':\n",
+    "            all_label.append(row)\n",
+    "\n",
+    "\n",
+    "all_label.pop(0)\n",
+    "\n",
+    "\n",
+    "man = 0\n",
+    "woman = 0\n",
+    "love_yes = 0\n",
+    "love_no = 0\n",
+    "work_yes = 0\n",
+    "work_no = 0\n",
+    "life_yes = 0\n",
+    "life_no = 0\n",
+    "\n",
+    "for man_what_can_i_say in all_label:\n",
+    "    if man_what_can_i_say[1] == '1':\n",
+    "        man += 1\n",
+    "    else:\n",
+    "        woman += 1\n",
+    "    if man_what_can_i_say[2] == '1':\n",
+    "        love_yes += 1\n",
+    "    else:\n",
+    "        love_no += 1\n",
+    "    if man_what_can_i_say[3] == '1':\n",
+    "        work_yes += 1\n",
+    "    else:\n",
+    "        work_no += 1\n",
+    "    if man_what_can_i_say[4] == '1':\n",
+    "        life_yes += 1\n",
+    "    else:\n",
+    "        life_no += 1\n",
+    "\n",
+    "print(\"数据集总人数：{}\".format(len(all_label)))\n",
+    "print(\"男:女 = {}:{}\".format(man, woman))\n",
+    "print(\"有伴侣:没伴侣 = {}:{}\".format(love_yes, love_no))\n",
+    "print(\"生活如意:不如意 = {}:{}\".format(work_yes, work_no))\n",
+    "print(\"健康:不健康 = {}:{}\".format(life_yes, life_no))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "126ad71b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "TP, FP, FN, TN = 1, 2, 3, 4\n",
+    "confusion_matrix = [[TP,FP],[FN,TN]]\n",
+    "confusion_matrix_text = [['TP','FP'],['FN','TN']]\n",
+    "plt.imshow(confusion_matrix, cmap=plt.cm.Blues)\n",
+    "plt.title(\"Confusion Matrix\")\n",
+    "thresh = np.max(confusion_matrix) / 2.0\n",
+    "for i in range(len(confusion_matrix)):\n",
+    "    for j in range(len(confusion_matrix[i])):\n",
+    "        plt.text(j, i, format(confusion_matrix_text[i][j]),\n",
+    "                 horizontalalignment=\"center\",\n",
+    "                 color=\"white\" if confusion_matrix[i][j] > thresh else \"black\")\n",
+    "plt.show()\n"
    ]
   }
  ],
